# sama-etat

./: .gitignore  CHANGELOG.md  CHANGES_OAUTH_AUDIT.md  CONTRIBUTING.md  DEPENDENCIES_AUDIT.md  Dockerfile  Dockerfile.test  GITHUB_PERMISSIONS_FIX.md  GITHUB_SETUP.md  Makefile  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PUBLICATION_READY.md  QUICK_START.md  README.fr.md  README.md  README_OAUTH.md  SECURITY.md  UPLOAD_INSTRUCTIONS.md  __manifest__.py  client_secret_73666461070-g9labmrht3d7rm9brojbpoeq7bniosjr.apps.googleusercontent.com.json  docker-compose.test.yml  docker-compose.yml  odoo.conf  publish_to_github.sh  pyproject.toml  pytest.ini  requirements.txt  start_odoo_detached.sh  upload_to_github.sh  upload_without_workflow.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
arbase/: .gitignore  CHANGELOG.md  CSS-PROBLEM-RESOLVED.md  ERREURS-RESOLUES.md  QUICK-START-v2.md  README-ARBase-v2.md  diagnose-and-fix.sh  get-local-ip.js  package.json  start-arbase-v2.sh  start-simple-vite.sh  test-arbase-v2.sh
arbase/admin-panel/: .env.example  package.json
arbase/admin-panel/src/: App.js
arbase/ar-engine-v2/: index.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
arbase/ar-engine-v2/core/: AREngine.ts
arbase/ar-engine-v2/qr-tracking/: QRTracker.ts
arbase/ar-engine-v2/rendering/: ARCamera.ts  ARRenderer.ts  ARScene.ts
arbase/ar-engine-v2/utils/: EventEmitter.ts  MathUtils.ts
arbase/ar-engine-v2/workers/: QRWorker.ts
arbase/backend-v2/: .env.example  clean-server.js  package-lock.json  package.json  simple-backend.js  simple-server.js  tsconfig.json
arbase/backend-v2/src/: server.ts
arbase/frontend-v2/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
arbase/frontend-v2/src/: App.tsx  fallback.css  index.css  main.tsx
config/: odoo.conf  odoo.test.conf
controllers/: __init__.py  oauth.py  oauth_new.py  public_controllers.py  secure_oauth.py
custom_addons/sama_carte/: INTEGRATION_PHOTOS_COMPLETE.md  PLAN_MISE_EN_OEUVRE_V2.md  RELEASE_NOTES_V1.5.md  ROADMAP_V2.0.md  SYNTHESE_FINALE_ANALYTICS.md  VERSION_1.5_STABLE.md  __manifest__.py
custom_addons/sama_carte/backgrounds/: README.md
custom_addons/sama_conai/: __manifest__.py  config.env  launch_sama_conai_complete.sh
custom_addons/sama_etat/: .gitignore  __manifest__.py  restore_backup.sh
custom_addons/sama_jokoo/: APPLICATION_READY.md  ARCHITECTURE.md  CHRONOLOGY.md  CORRECTION_APPLIED.md  ERROR_500_FIXED.md  INSTALLATION_COMPLETE.md  MILESTONE_1_COMPLETE.md  MILESTONE_2_COMPLETE.md  MILESTONE_3_COMPLETE.md  NEUMORPHIC_DESIGN.md  PHASE_4.3_USER_PROFILES.md  README.md  README_QUICK_START.md  ROADMAP_NEXT_PHASE.md  SOLUTIONS.md  TODO.md  __manifest__.py  __manifest_full.py  fix_comments_issue.sh  fix_error_500.sh  install_test.sh  open_comments_app.sh  open_updated_app.sh  quick_api_test.py  quick_test.sh  restart_app.sh  restart_sama_jokoo.sh  sama_jokoo_app.html  sama_jokoo_with_comments.html  sama_jokoo_with_profiles.html  serve_app.py  serve_comments_app.py  serve_profiles_app.py  simple_install_test.sh  simple_server.js  start_comments_app.sh  start_demo.sh  start_fixed.sh  start_full_app.sh  start_hybrid_app.sh  (+12 more)
custom_addons/sama_syndicat/: ARGUMENTAIRE_VENTE_SAMA_SYNDICAT.md  BACKUP_V1.2_COMPLETE.md  BACKUP_V1.5_SUMMARY.md  COMPLETE_FIX_REPORT.md  CONVERSION_EUROS_CFA_SUMMARY.md  CORRECTION_ACTIONS_DASHBOARDS.md  CORRECTION_CSS_LARGEUR.md  DASHBOARDS_MODERNES.md  DASHBOARD_VERSIONS.md  DEVELOPMENT.md  DIAGNOSTIC_500_FINAL.md  DOCUMENTATION_CONTINUATION_SUMMARY.md  EMAIL_PROSPECTION_SYNDICATS.md  ERROR_FIX_REPORT.md  FINAL_REPORT.md  GUIDE_MENUS_DASHBOARDS.md  INSTALLATION_STATUS.md  KIT_COMMERCIAL_SAMA_SYNDICAT.md  OWL_ERROR_FIX_REPORT.md  PRESENTATION_DEMO_SAMA_SYNDICAT.md  RAPPORT_DASHBOARD_VERSIONS.md  RAPPORT_FINAL_ROUTES.md  RAPPORT_VALIDATION_FINALE.md  README_SCRIPTS.md  README_STARTUP.md  SAMA_SYNDICAT_BROCHURE_COMMERCIALE.md  SAMA_SYNDICAT_PRESENTATION_COMMERCIALE.md  SCRIPTS_DEMARRAGE_FINAL.md  SCRIPT_APPEL_COMMERCIAL.md  SETTINGS_ACCESS_SOLUTION.md  SOLUTION_MENUS_DASHBOARDS.md  WEB_STUDIO_COMMUNITY_FIX_SUMMARY.md  backup_v1.1_stable.sh  check_menus_status.py  check_ready.py  check_status.sh  clean_database.py  complete_module_reset.py  comprehensive_test.py  create_fresh_database.py  (+41 more)
custom_addons/senegal_gov_project_management/: README.md  __init__.py  __manifest__.py
data/: ai_data_clean.xml  ai_menu_cleanup.xml  ai_provider_config_data.xml  cleanup_old_ai_menus.xml  dashboard_data.xml  demo_cost_breakdown.xml  demo_funding_sources.xml  demo_legal_compliance.xml  demo_legal_texts.xml  final_ai_model_cleanup.xml  force_clean_ai_implementation.xml
dev_tools/: README.md
dev_tools/scripts/: regenerate_assets.sh  test_oauth.py
docs/: GITHUB_UPLOAD_SUCCESS.md  README.md  RESTORATION_SUMMARY.md
fiche_project_public_sn/security/: ir.model.access.csv
fiche_project_public_sn/views/: project_public_info_type_view.xml  project_public_location_view.xml  project_public_policy_view.xml  project_public_project_view.xml  project_public_sector_view.xml
migrations/18.0.2.0.1/: __init__.py  post-migration.py  pre-migration.py
models/: __init__.py  ai_content_helper.py  ai_models_clean.py  ai_provider_config.py  business_models.py  project_cost_breakdown.py  project_funding_source.py  project_legal_text.py
scripts/: check_dependencies.py  entrypoint.sh  init_db.sql  test_entrypoint.sh
security/: ai_provider_security.xml  ir.config_parameter.csv  ir.model.access.csv
static/description/: oauth_setup.md
tests/: __init__.py  test_models.py  test_oauth_flow.py  test_oauth_flows.py
utils/: __init__.py  oauth_utils.py
views/: ai_content_helper_views.xml  ai_oauth_views.xml  ai_provider_config_views.xml  ai_provider_views.xml  ai_views_clean.xml  dashboard_views.xml  government_event_views.xml  government_project_views.xml  main_menu_views.xml  menu_views.xml  oauth_templates.xml  public_axis_page.xml  public_map.xml
(+405 files in other folders)
